test/syc/bad/bitfieldwidth.c
/*
 * Bitfield 'bf1' is wider than its type.
 */

struct s {
	char bf1 : 9;
};
